EmirH: fixed issue with extra white space at bottom

--- a/CSS/Blog.css
+++ b/CSS/Blog.css
@@ -18,6 +18,7 @@ div.Container div.TableOfContents {
 
 div.Container div.Essay {
 	padding: 0px 20px;
+	padding-bottom: 200px;
 	width: 620px;
 	float: left;
 	text-align: justify;
